# llm-gateway-mcp-public

./: .env.example  .gitignore  LICENSE  README.md  component.yaml  pyproject.toml  requirements.txt  routing.yaml  server.py  smoke_test.py
orchestration/: __init__.py  compose.py  independence.py  roles.py
policies/: __init__.py  circuit_breaker.py  cost_estimator.py  cost_ledger.py  error_taxonomy.py  fallback.py  retry_backoff.py
providers/: __init__.py  anthropic.py  deepseek.py  gemini.py  openai.py
tests/: test_independence.py  test_orchestration.py  test_routing.py
